# FSOT-Monte-Carlo-Intelligence

./: .gitattributes  .gitignore  HANDOFF.md  LICENSE  README.md  START_FSOT.bat  STOP_FSOT.bat  pyproject.toml  requirements.txt
data/pred_bench/: closure_ledger.json
docs/: ACHIEVEMENTS.md  ARTICULATION_LEARNING.md  CLAIMS.md  FLIP_HOTSPOT_PROTOCOLS.md  IMPROVEMENT_CYCLE.md  LITERATURE_CORPUS.md  MEMORY_ARCHITECTURE.md  METHODOLOGY.md  PATHWAY_ALIGNMENT.md  PRED_BENCH_CLOSURE.md  PRED_PRIORITY_ROADMAP.md  PRE_FSOT_CONCEPT_VISION.md  QWEN_WEIGHTS.md  REPRODUCIBILITY.md  SCIENTIFIC_AUDIT_REPORT.md  UNIVERSE_INTELLIGENCE_ARCHITECTURE.md
docs/tissue/: INDEX.md  manifest.json
docs/tissue/domains/: Acoustics.md  (+478 more)
examples/: minimal.py
frontend/: app.js  graph3d.js  index.html  styles.css
fsot_mc/: PIN.json  __init__.py  __main__.py  accuracy_gate.py  adaptive_memory.py  api_adapters.py  archive_connective.py  archive_predictions.py  articulation_learn.py  atlas_build.py  authority_gate.py  bhs_engine.py  bio_emergence.py  chew_solidify.py  claims_ledger.py  compute_authority.py  contested_physics.py  discovery.py  doc_rag.py  experiment_protocols.py  fast.py  flip_protocols.py  formal_bridge.py  forward_journal.py  full_atlas.json  graph_model.py  improvement_cycle.py  intelligence.py  intrinsic.py  language_relay.py  literature_corpus.py  mind.py  monte_carlo.py  paths.py  pathway_alignment.py  pathway_memory.py  pattern_memory.py  pflt_bridge.py  pi_ring.py  polar_student.py  (+12 more)
publishing/huggingface/: MODEL_CARD.md  README.md
publishing/kaggle/: dataset-metadata.json  fsot_mc_demo.ipynb
scripts/: bootstrap_independent.py  download_qwen25_instruct.py  export_publication_bundle.py  package_optional_assets.py  publish_github.ps1  publish_huggingface.ps1  publish_kaggle.ps1  smoke_bhs.py  smoke_mc.py  sync_archive_bundle.py
tests/: test_accuracy_gate.py  test_adaptive_memory.py  test_articulation_learn.py  test_doc_rag.py  test_fullstack_graph.py  test_improvement_cycle.py  test_independent_and_next.py  test_layers_2_4.py  test_layers_5_9.py  test_literature_corpus.py  test_mc_core.py  test_mind.py  test_narrate_pack.py  test_pathway_alignment.py  test_refine_gaps.py  test_sd_layout.py  test_tissue_docs.py  test_universe_core.py
(+208 files in other folders)
