[project]
name = "fsot-monte-carlo-intelligence"
version = "0.2.0"
description = "FSOT 2.1 Monte Carlo intelligence — observer collapse, pattern solidification, zero free parameters"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Damian Arthur Palumbo" }]
keywords = ["FSOT", "Monte Carlo", "fluid spacetime", "zero free parameters", "intelligence"]
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "mpmath>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]
publish = ["huggingface_hub>=0.23.0"]

[project.urls]
Homepage = "https://github.com/dappalumbo91/FSOT-Monte-Carlo-Intelligence"
Theory = "https://github.com/dappalumbo91/FSOT-2.1-Lean"

[project.scripts]
fsot-mc = "fsot_mc.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fsot_mc*"]

[tool.setuptools.package-data]
fsot_mc = ["PIN.json"]
